Bug 424305 - Reload home page failed
Summary: Reload home page failed
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-16 20:06 UTC by antoine
Modified: 2020-07-19 15:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2020-07-16 20:06:41 UTC
SUMMARY


STEPS TO REPRODUCE
1. Open a kmm file
2. Right click on the home page
3. Click "Reload"

OBSERVED RESULT

Reload failed
This message appear "Frame load interrupted by policy change"

EXPECTED RESULT


SOFTWARE/OS VERSIONS
xubuntu 20.04
Comment 1 antoine 2020-07-16 20:09:59 UTC
After few test, it seems that actions in the right click menu often fail on the home page (open link, open in new window, save link, copy link, save image , ...)
Comment 2 Jack 2020-07-17 03:01:22 UTC
With Artix Linux package of 5.1.0, I see the same thing, but error includes "Failed to load URL file:///."  and "Webkit error 102" so not sure if the policy change is a red herring, and it actually doesn't really know how to reload the page.
Comment 3 Jack 2020-07-19 00:16:45 UTC
As additional info, the ubuntu package of 5.0.8 is built with qtwebkit, which has been deprecated for a while, to be replaced by qtwebengine.  I do NOT see the problem on my main PC, with KMM compiled with webengine instead of webkit.  I'll leave a final decision to the developers, but I suspect this will not be addressed here.  You might want to file a but with Ubuntu to switch from webkit to webengine for KMM.  (I admit, I'm only assuming your other right-click issues are related to this, but it seems reasonable.)
Comment 4 Thomas Baumgart 2020-07-19 14:24:11 UTC
Git commit 637824bbd75f183fb1bdd5458663edf0ade0bca1 by Thomas Baumgart.
Committed on 19/07/2020 at 14:18.
Pushed by tbaumgart into branch '5.1'.

Suppress context menu in home view

The standard context menu of the webview object does not work in this
context so we simply suppress to show it.
FIXED-IN: 5.1.1

M  +13   -0    kmymoney/views/khomeview.cpp
M  +1    -0    kmymoney/views/khomeview.h
M  +1    -0    kmymoney/views/khomeview_p.h

https://invent.kde.org/office/kmymoney/commit/637824bbd75f183fb1bdd5458663edf0ade0bca1
Comment 5 Thomas Baumgart 2020-07-19 15:50:23 UTC
Git commit ca19c147c42288792da9f5b7415fd395f10acbc4 by Thomas Baumgart.
Committed on 19/07/2020 at 15:48.
Pushed by tbaumgart into branch 'master'.

Suppress context menu in home view

The standard context menu of the webview object does not work in this
context so we simply suppress to show it.

(cherry picked from commit 637824bbd75f183fb1bdd5458663edf0ade0bca1)

M  +13   -0    kmymoney/views/khomeview.cpp
M  +1    -0    kmymoney/views/khomeview.h
M  +1    -0    kmymoney/views/khomeview_p.h

https://invent.kde.org/office/kmymoney/commit/ca19c147c42288792da9f5b7415fd395f10acbc4