Suppress context menu in home view

The standard context menu of the webview object does not work in this
context so we simply suppress to show it.

BUG: 424305
FIXED-IN: 5.1.1